# Fundamentals_of_project_activity_CPP_sfml

lw1/: ab.cpp  abc.cpp  hello.cpp  hello_err.cpp  hello_name.cpp  linear_equation.cpp  square_equation.cpp
lw2/sfml.1/02/: main.cpp
lw2/sfml.1/03/: main.cpp
lw2/sfml1.1/: CMakeLists.txt
lw2/sfml1.1/00/: CMakeLists.txt  main.cpp
lw2/sfml1.2/00/: main.cpp
lw2/sfml1.3/: CMakeLists.txt
lw2/sfml1.3/00/: main.cpp
lw3/sfml.2/: .gitignore  CMakeLists.txt
lw3/sfml.2/00/: CMakeLists.txt  main.cpp
lw3/sfml.2/01/: main.cpp
lw3/sfml.2/02/: main.cpp
lw3/sfml.2/03/: main.cpp
lw3/sfml.2/04/: main.cpp
lw3/sfml.2/05/: CMakeLists.txt  main.cpp
lw4/sfml3/: CMakeLists.txt
lw4/sfml3/01/: main.cpp
lw4/sfml3/02/: main.cpp
lw4/sfml3/03/: main.cpp
lw4/sfml3/03.1/: CMakeLists.txt  main.cpp
lw4/sfml3/04/: main.cpp
lw4/sfml3/05/: CMakeLists.txt  main.cpp
lw5/: CMakeLists.txt
lw5/00/: CMakeLists.txt  main.cpp
lw5/01/: main.cpp
